<resources>
    <string name="app_name">Happy Baby</string>
    <string name="button_addActivity">Add Activity</string>
    <string name="hint_activityReminderDescription">Reminder Description</string>
    <string name="menu_addReminder">Reminder</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_home">Home</string>
    <string name="menu_share">Export</string>
    <string name="menu_exit">Exit</string>
    <string name="button_saveImage">Save Image</string>
    <string name="hint_activityTitle">Title</string>
    <string name="hint_activityDescription">Description</string>
    <string name="menu_shareActivity">Share</string>
    <string name="menu_cancelActivity">Cancel</string>
    <string name="menu_searchActivity">Search</string>
    <string name="menu_saveActivity"> Save Activity </string>
    <string name="menu_saveImage"> Save Image </string>
    <string name="menu_updateImage"> Update Image </string>
    <string name="button_addImage"> Select Image </string>
    <string name="button_changeImage">Change Image</string>
    <string name="select_activity_image">Select activity image</string>
    <string name="warning_enterTitle">Please enter a title for your Image</string>
    <string name="warning_incorrect_credentials">Incorrect Login Credentials</string>
    <string name="warning_enter_credentials">Please enter an email and password</string>
    <string name="login_success">Logged In</string>
    <string name="activity_category_header">Activity Category</string>
    <string name="activity_rating_header">Rate Babys Mood</string>
    <string name="add_activity_header">Add Activity</string>
    <string name="option_pee">Pee</string>
    <string name="option_poo">Poop</string>
    <string name="option_feed">Feed</string>
    <string name="option_medication">Medication</string>
    <string name="option_exercise">Exercise</string>
    <string name="option_newborn">Newborn</string>
    <string name="option_0_3">0–3m</string>
    <string name="option_3_6">3–6m</string>
    <string name="option_6_9">6–9m</string>
    <string name="option_9_12">9–12m</string>
    <string name="button_location">Set Location</string>
    <string name="button_register">Sign Up</string>
    <string name="button_reminder">Set Reminder</string>
    <string name="activity_image_placeholder">Activity Image</string>
    <string name="activity_title_placeholder">Activity Title</string>
    <string name="activity_description_placeholder">Activity Description</string>
    <string name="activity_category_placeholder">Activity Category</string>
    <string name="search_hint">Search Description</string>
    <string name="login_message">Please Sign In</string>
    <string name="register_message">Create your account</string>
    <string name="username_hint">Username</string>
    <string name="password_hint">Password</string>
    <string name="button_sign_in">Sign in</string>
    <string name="message_no_account">Don\'t have an account?</string>
    <string name="message_create_account">Create one</string>
    <string name="chip_option_all">All Activities</string>
    <string name="chip_option_poo">Poop</string>
    <string name="chip_option_pee">Pee</string>
    <string name="chip_option_feed">Feed</string>
    <string name="chip_option_medication">Medication</string>
    <string name="chip_option_exercise">Exercise</string>
    <string name="chip_option_priority">High Priority</string>
    <string name="chip_option_newborn">Newborn</string>
    <string name="chip_option_threeToSix">3–6m</string>
    <string name="chip_option_sixToNine">6–9m</string>
    <string name="chip_option_nineToTwelve">9–12m</string>
    <string name="chip_option_all_images">All</string>
    <string name="checkbox_priority">High Priority</string>
    <string name="checkbox_favourite">Favourite Image</string>
    <string name="activity_date_text">Please Select the Date of Activity:</string>
    <string name="activity_time_text">Please Select the Time of Activity:</string>
    <string name="reminder_date_text">Please Select the Date of Reminder:</string>
    <string name="reminder_time_text">Please Select the Time of Reminder:</string>
    <string name="switchLayout">Switch</string>
    <string name="nav_open">Open</string>
    <string name="nav_close">Close</string>
    <string name="add_image">Add Milestone</string>
</resources>