<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".views.activitiesmap.ActivitiesMapView"
    tools:showIn="@layout/activity_activity_maps">

    <Spinner
        android:id="@+id/map_spinner"
        android:layout_width="132dp"
        android:layout_height="24dp"
        app:layout_constraintBottom_toTopOf="@+id/mapView"
        app:layout_constraintStart_toStartOf="@+id/mapView"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.gms.maps.MapView
        android:id="@+id/mapView"
        android:layout_width="365dp"
        android:layout_height="485dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        app:layout_constraintBottom_toTopOf="@+id/cardView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.636"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.897" />

    <androidx.cardview.widget.CardView
        android:id="@+id/cardView"
        android:layout_width="356dp"
        android:layout_height="127dp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.533"
        app:layout_constraintStart_toStartOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="355dp"
            android:layout_height="126dp">

            <ImageView
                android:id="@+id/currentImage"
                android:layout_width="129dp"
                android:layout_height="115dp"
                android:layout_marginEnd="16dp"
                android:contentDescription="@string/activity_image_placeholder"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:srcCompat="@tools:sample/backgrounds/scenic" />

            <TextView
                android:id="@+id/currentTitle"
                android:layout_width="173dp"
                android:layout_height="21dp"
                android:text="@string/activity_title_placeholder"
                android:textSize="18dp"
                app:layout_constraintBottom_toTopOf="@+id/currentDescription"
                app:layout_constraintEnd_toStartOf="@+id/currentImage"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.722" />

            <TextView
                android:id="@+id/currentDescription"
                android:layout_width="173dp"
                android:layout_height="40dp"
                android:layout_marginBottom="32dp"
                android:text="@string/activity_description_placeholder"
                android:textStyle="italic"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/currentImage"
                app:layout_constraintStart_toStartOf="parent" />

            <TextView
                android:id="@+id/currentCategory"
                android:layout_width="173dp"
                android:layout_height="18dp"
                android:text="@string/activity_category_placeholder"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/currentImage"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/currentDescription"
                app:layout_constraintVertical_bias="0.111" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>