<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/backgroundColor"
    tools:context="ie.wit.happybaby.views.activitylist.ActivityListView">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appBarLayout3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimaryDark"
        android:fitsSystemWindows="true"
        app:elevation="0dip"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:fontFamily="@font/handlee"
            android:layout_height="wrap_content"
            app:titleTextColor="@color/colorPrimary">

        </androidx.appcompat.widget.Toolbar>
    </com.google.android.material.appbar.AppBarLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

    </LinearLayout>

    <ScrollView
        android:id="@+id/scrollView2"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/timeline"
        android:layout_marginTop="?attr/actionBarSize"
        android:fillViewport="true"></ScrollView>


    <TextView
        android:id="@+id/timeline"
        android:layout_width="match_parent"
        android:layout_height="85dp"
        android:layout_marginTop="50dp"
        android:gravity="center"
        android:text="Activities Timeline"
        android:fontFamily="@font/handlee"
        android:textColor="@color/colorPrimary"
        android:background="@color/colorPrimaryDark"
        android:paddingBottom="8dp"
        android:paddingTop="55dp"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        app:layout_anchor="@+id/chip_options"
        tools:text="Activities Timeline" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerView"
        android:layout_width="match_parent"
        android:layout_height="540dp"
        android:layout_marginTop="80dp"
        android:layout_marginBottom="45dp"
        android:scrollbars="vertical"
        app:layout_behavior="@string/appbar_scrolling_view_behavior" />


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom">

        <com.google.android.material.bottomnavigation.BottomNavigationView
            android:id="@+id/bottomNav"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:scrollIndicators="left"
            app:labelVisibilityMode="labeled"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:menu="@menu/menu_bottom" />
    </LinearLayout>

    <TextView
        android:id="@+id/noActivitiesFound"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="No activities logged yet"
        android:textAlignment="center"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        tools:text="No activities logged yet" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/adder"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|end"
        android:layout_margin="50dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:srcCompat="@android:drawable/ic_input_add"
        android:contentDescription="add" />

    <HorizontalScrollView

        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:scrollbars="none"
       >
        <LinearLayout
            android:id="@+id/ll"
            android:layout_width="fill_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">
        <com.google.android.material.chip.ChipGroup
            android:id="@+id/chip_options"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@color/colorPrimaryDark"
            app:chipStrokeColor="@color/colorPrimaryDark"
            app:layout_anchor="@+id/chip_options"
            app:layout_anchorGravity="center_horizontal"
            app:selectionRequired="true"
            app:singleSelection="true">

            <com.google.android.material.chip.Chip
                android:id="@+id/chip_option_pee"
                style="@style/Widget.MaterialComponents.Chip.Filter"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAlignment ="center"
                android:text="@string/chip_option_pee"
                app:chipBackgroundColor="@color/teal_200" />

            <com.google.android.material.chip.Chip
                android:id="@+id/chip_option_poo"
                style="@style/Widget.MaterialComponents.Chip.Filter"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAlignment ="center"
                android:text="@string/chip_option_poo"
                app:chipBackgroundColor="@color/teal_200" />

            <com.google.android.material.chip.Chip
                android:id="@+id/chip_option_feed"
                style="@style/Widget.MaterialComponents.Chip.Filter"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAlignment ="center"
                android:text="@string/chip_option_feed"
                app:chipBackgroundColor="@color/teal_200" />

            <com.google.android.material.chip.Chip
                android:id="@+id/chip_option_medication"
                style="@style/Widget.MaterialComponents.Chip.Filter"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:textAlignment ="center"
                android:text="@string/chip_option_medication"
                app:chipBackgroundColor="@color/teal_200"
                app:chipStrokeColor="@color/colorAccent" />

            <com.google.android.material.chip.Chip
                android:id="@+id/chip_option_exercise"
                style="@style/Widget.MaterialComponents.Chip.Filter"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAlignment ="center"
                android:text="@string/chip_option_exercise"
                app:chipBackgroundColor="@color/teal_200" />


            <com.google.android.material.chip.Chip
                android:id="@+id/chip_option_priority"
                style="@style/Widget.MaterialComponents.Chip.Filter"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:textAlignment ="center"
                android:text="@string/chip_option_priority"
                app:chipBackgroundColor="@color/teal_200" />

            <com.google.android.material.chip.Chip
                android:id="@+id/chip_option_all"
                style="@style/Widget.MaterialComponents.Chip.Filter"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAlignment ="center"
                android:text="@string/chip_option_all"
                app:chipBackgroundColor="@color/teal_200" />


        </com.google.android.material.chip.ChipGroup>
        </LinearLayout>
    </HorizontalScrollView>

</androidx.coordinatorlayout.widget.CoordinatorLayout>
